--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/ui": "^4.2",
         "midtrans/midtrans-php": "^2.5",
         "realrashid/sweet-alert": "^7.0",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "symfony/http-client": "^6.3",
+        "symfony/mailgun-mailer": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
