--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "midtrans/midtrans-php": "^2.5",
+        "ramsey/uuid": "^4.7",
         "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-permission": "^5.10",
         "symfony/http-client": "^6.3",
